--- a/titanic/titanic_lr.ipynb
+++ b/titanic/titanic_lr.ipynb
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
        "4       3  female  22.0      1      1  12.2875        S"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1819,7 @@
        "[8 rows x 25 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1830,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1840,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1857,7 @@
     "X_testing_real_zeros = df[real_features].to_numpy()\n",
     "X_testing_cat_zeros = df[cat_features].to_numpy()\n",
     "\n",
-    "X_testing_real_zeros_scaled = scaler_zeros.fit_transform(X_testing_real_zeros)\n",
+    "X_testing_real_zeros_scaled = scaler_zeros.transform(X_testing_real_zeros)\n",
     "\n",
     "print (\"X_real: {} \".format(X_real_zeros[0]))\n",
     "print (\"X_cat: {} \".format(X_cat_zeros[0]))\n",
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 116,
    "metadata": {
     "scrolled": false
    },
