--- a/mnist/mnist.ipynb
+++ b/mnist/mnist.ipynb
@@ -21,6 +21,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -155,6 +162,13 @@
     "\n",
     "test_x = torch.Tensor(np.expand_dims(normalize(test_np_x), axis=1))\n",
     "test_y = torch.LongTensor(test_np_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neural network"
    ]
   },
   {
@@ -1018,7 +1032,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Расчет"
+    "## Submission"
    ]
   },
   {
