--- a/titanic/titanic_vt2.ipynb
+++ b/titanic/titanic_vt2.ipynb
@@ -1097,8 +1097,43 @@
     "svm_model = SVC(gamma='auto')\n",
     "\n",
     "score = cross_val_score(svm_model, X, y, cv=10)\n",
-    "score_mean = score.mean()\n",
+    "score_mean = score.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print (score_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'kernel': ['linear'],\n",
+    "    'degree': [1],\n",
+    "    'C': [600.0, 650.0, 700.0, 750.0, 800.0],\n",
+    "    'epsilon': [0.01, 0.05, 0.1, 0.12]\n",
+    "}\n",
+    "estimator = SVC()\n",
+    "\n",
+    "svm2_model = GridSearchCV(estimator, param_grid, cv=10, n_jobs=-1, verbose=3)\n",
+    "svm2_model.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print (svr2_model.best_estimator_)"
    ]
   },
   {
