--- a/titanic/titanic_nn.ipynb
+++ b/titanic/titanic_nn.ipynb
@@ -785,7 +785,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_features = (0, 1, 2, 5, 7, 9, 10, 12, 14, 16, 17, 18, 19, 21, 22)"
+    "#selected_features = (0, 1, 2, 5, 7, 9, 10, 12, 14, 16, 17, 18, 19, 21, 22)"
    ]
   },
   {
@@ -805,8 +805,8 @@
     "X_train = np.hstack((X_train_real, X_train_cat))\n",
     "X_test = np.hstack((X_test_real, X_test_cat))\n",
     "\n",
-    "X_train = X_train[:,selected_features]\n",
-    "X_test = X_test[:,selected_features]\n",
+    "#X_train = X_train[:,selected_features]\n",
+    "#X_test = X_test[:,selected_features]\n",
     "\n",
     "X_train = torch.Tensor(X_train)\n",
     "y_train = torch.Tensor(y_train)\n",
@@ -815,6 +815,62 @@
     "\n",
     "print (X_train.shape, X_test.shape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## L1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -5504,7 +5560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
